apply plugin: "java"
apply plugin: 'kotlin'


version '1.0'

sourceCompatibility = 16

repositories {
    maven { url 'https://www.jitpack.io' }
    maven {
        name 'm2-dv8tion'
        url 'https://m2.dv8tion.net/releases'
    }
    mavenCentral()
}

ext {
    //the build number that this plugin is made for
    arcVersion = 'v135'
    mindustryVersion = 'getMapScreenshot'
}

dependencies {
    implementation 'org.jsoup:jsoup:1.14.3'
    compileOnly("com.github.Anuken.Arc:arc-core:$arcVersion")
    compileOnly("com.github.Anuken.Mindustry:core:$arcVersion")
    compileOnly "com.github.Anuken.Mindustry:server:$arcVersion"
//    compileOnly("com.github.fuzzbuck.Mindustry:core:$mindustryVersion")
//    compileOnly("com.github.fuzzbuck.Mindustry:server:$mindustryVersion")
    implementation group: 'org.json', name: 'json', version: '20210307'
    compileOnly 'org.springframework.data:spring-data-redis:2.6.0'
//    compileOnly 'redis.clients:jedis:3.6.3'
    compileOnly('org.glassfish.jersey.core:jersey-client:3.0.3')
//    compileOnly("redis.clients:jedis:3.2.0")
//    compileOnly('org.apache.commons:commons-pool2:2.15.0')
//    compileOnly('redis.clients:jedis:3.6.3')

    implementation('org.javacord:javacord:3.4.0')
    compileOnly('javax.ws.rs:javax.ws.rs-api:2.1.1')
    implementation 'com.google.code.gson:gson:2.9.0'
    implementation("net.dv8tion:JDA:4.3.0_277")
//    implementation 'org.postgresql:postgresql:42.2.24.jre7'
    // http://mvnrepository.com/artifact/postgresql/postgresql
    compileOnly group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
    runtimeOnly 'org.apache.logging.log4j:log4j-to-slf4j:2.17.1'
    runtimeOnly 'ch.qos.logback:logback-classic:1.2.11'

    // https://mvnrepository.com/artifact/com.github.kevinsawicki/http-request
    implementation group: 'com.github.kevinsawicki', name: 'http-request', version: '6.0'


}

jar {
    version = null
    exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from {
        configurations.runtimeClasspath.findAll { !it.name.endsWith('pom') }.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
buildscript {
    ext.kotlin_version = '1.6.0'
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
    }
}
compileKotlin {
    kotlinOptions {
        jvmTarget = "1.8"
    }
}
compileTestKotlin {
    kotlinOptions {
        jvmTarget = "1.8"
    }
}
